--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <div id="app">
       <img v-bind:src="imgURL" alt="Hacktiv8 Logo">
       <h1>Todo App</h1>
-      <ul>
-        <li v-for="(todo, index) in todos">{{ todo.title }}</li>
-      </ul>
       <form method="post" v-on:submit.prevent="addTodo">
         <input
           type="text"
@@ -20,6 +17,9 @@
           autofocus>
         <input type="submit">
       </form>
+      <ul>
+        <li v-for="(todo, index) in todos">{{ todo.title }}</li>
+      </ul>
     </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -38,18 +38,18 @@
         },
 
         computed: {
-          idrPrice: function() {
+          idrPrice() {
             return 'IDR ' + this.price.toLocaleString();
           }
         },
 
         watch: {
-          price: function() {
+          price() {
             console.log('Price updated!');
           },
         },
 
-        created: function() {
+        created() {
           axios
             .get(serverUrl + '/todos')
             .then(({ data }) => {
